--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-scann==1.2.8
-tensorflow==2.10
-torch==2.0.1
-transformers==4.27.3
-tqdm==4.64.1
+scann==1.2.9 # Installs tensorflow, don't add it on requirements.txt
+torch==2.0.0
+transformers>=4.28
+tqdm==4.62.3
 pandas==1.5.2
 black==21.7b0
-sentencepiece==0.1.97
-lightning==2.0.0
-scikit-learn==1.1.3
-h5py==3.8.0
-tables==3.8.0
+sentencepiece
+lightning>=2.0.0
+tensorboard>=2.9.0
+scikit-learn>=1.1.3
+h5py>=3.8.0
+tables>=3.8.0
 # Language specifics
 # French
-sacremoses==0.0.53
-deepspeed==0.9.2
+sacremoses>=0.0.53
