--- a/config/text/retrieval.yaml
+++ b/config/text/retrieval.yaml
@@ -33,8 +33,8 @@ training:
   warmup_proportion: 0.1
   random_negatives_loss_scaler: 50
   auto_batch_size: "True"
-  min_epochs: 1
-  max_epochs: 5
+  min_epochs: null
+  max_epochs: null
 
 testing: # Only important when training the model
   batch_size: 128
