--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 scann==1.2.9 # Installs tensorflow, don't add it on requirements.txt
 torch==2.0.1
-transformer==4.30.1
+transformers==4.30.1
 tqdm==4.62.3
 pandas==1.5.2
 black==21.7b0
